tests/compile/command_modules/branch.stderr
In file included from branch.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:12:
directives.hpp:444:16: error: static assertion failed due to requirement 'arms_match': branch: both arms must produce identical Commands types; any divergence in effects (bindings, dispatches, barriers) is rejected
  444 |         static_assert(arms_match,
      |                       ^~~~~~~~~~
branch.cpp:59:5: note: in instantiation of function template specialization 'rcgp::branch<(lambda at branch.cpp:60:4), (lambda at branch.cpp:61:4)>' requested here
   59 |                 | branch(flag,
      |                   ^
In file included from branch.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: params_b
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
branch.cpp:59:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eCompute>, rcgp::NormalEntry<norm_entry{{1, &params_b, 0}, 1, {{0, 0}, {0, 0}}, &ref_name_storage._M_elems[0]}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eCompute>>' requested here
   59 |                 | branch(flag,
      |                 ^
2 errors generated.
